Fix and refactor CNP generation logic, UI updates
- Update combineSexAndCentury to fix incorrect input type checks and ensure proper validation.
- Refactor getCountyCode to resolve both county names and codes correctly using countyCodes.
- Adjust generateCNP to ensure proper parameter formatting, fixing a bug with monthOfBirth input by converting it to a string.
- Update index.html to use a dropdown with month names instead of numbers for better usability and consistency with generateDOBSequence.
- Fix styling issues and improved user experience in the UI.
- Improve error handling and validation to provide clearer feedback for invalid inputs.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,20 @@
             <input type="number" id="yearOfBirth" name="yearOfBirth" min="1800" max="2099" required>
 
             <label for="monthOfBirth">Month of Birth:</label>
-            <input type="number" id="monthOfBirth" name="monthOfBirth" min="1" max="12" required>
+            <select id="monthOfBirth" name="monthOfBirth" required>
+              <option value="january">January</option>
+              <option value="february">February</option>
+              <option value="march">March</option>
+              <option value="april">April</option>
+              <option value="may">May</option>
+              <option value="june">June</option>
+              <option value="july">July</option>
+              <option value="august">August</option>
+              <option value="september">September</option>
+              <option value="october">October</option>
+              <option value="november">November</option>
+              <option value="december">December</option>
+            </select>
 
             <label for="dayOfBirth">Day of Birth:</label>
             <input type="number" id="dayOfBirth" name="dayOfBirth" min="1" max="31" required>
