Add manual input for 3-digit sequence
- Major: Allow user to manually input the 3-digit sequence (digits 10-12) in the CNP generation. If left blank, the generateUniqueCode function will be used as a fallback
- Minor: Implement try/catch block inside script.js to handle errors and display them visually in place of the generated CNP

--- a/index.html
+++ b/index.html
@@ -131,6 +131,9 @@
                 <option value="52">Giurgiu</option>
             </select>
 
+            <label for="seqDigits">3-digit sequence (optional)</label>
+            <input type="number" id="seqDigits" placeholder="Leave empty for random" name="seqDigits" min="0" max="999">
+
             <button id="generateCnpButton">Generate CNP</button>
         </div>
 
